syntax = "proto3";

package helvetia.anteil.v1;

option go_package = "github.com/helvetia-protocol/helvetia-protocol/proto/gen/go/helvetia/anteil/v1;anteilv1";

// Msg defines the Msg service for anteil module
service Msg {
  rpc PlaceOrder(MsgPlaceOrder) returns (MsgPlaceOrderResponse);
  rpc CancelOrder(MsgCancelOrder) returns (MsgCancelOrderResponse);
  rpc PlaceBid(MsgPlaceBid) returns (MsgPlaceBidResponse);
}

import "helvetia/anteil/v1/types.proto";

message MsgPlaceOrder {
  string sender = 1;
  OrderSide side = 2;
  string amount = 3; // sdk.Coin string
  string price  = 4; // sdk.Dec string
}

message MsgPlaceOrderResponse {
  string order_id = 1;
}

message MsgCancelOrder {
  string sender = 1;
  string order_id = 2;
}

message MsgCancelOrderResponse {
  bool success = 1;
}

message MsgPlaceBid {
  string validator = 1;
  string auction_id = 2;
  string ant_amount = 3;
}

message MsgPlaceBidResponse {
  bool success = 1;
}


